2013-04-07  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* cygheap.cc (init_cygheap::find_tls): Add a comment.
	* dcrt0.cc (parent_sigmask): Delete.
	(dll_crt0_1): Use spawn_info->moreinfo->sigmask rather than saved
	parent signal mask.
	* thread.cc (pthread::thread_init_wrapper): Add comment stressing the
	importance of maintaining ordering of statements.

2013-04-05  Corinna Vinschen  <corinna@vinschen.de>

	* mmap.cc (is_mmapped_region): Call LIST_UNLOCK on premature return.

2013-04-03  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_proc.cc (format_proc_loadavg): Raise too small buffer size
	to avoid overwriting unrelated cygheap memory.

2013-04-03  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (class suffix_scan): Add member namelen.
	(suffix_scan::name_len): New method.
	(suffix_scan::has): Store namelen since we have it already anyway.
	Add a bit of explanation and a FIXME to comment.
	(suffix_scan::next): Never attach extra .lnk suffix if resulting
	filename length exceeds NAME_LEN.
	(symlink_info::check): Bail out immediately with ENAMETOOLONG if
	filename length exceeds NAME_LEN.

2013-03-31  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* child_info.h (cygheap_exec_info::sigmask): Declare new field.
	* cygheap.cc (init_cygheap::find_tls): Rename threadlist_ix -> ix.
	Only take one pass through thread list, looking for eligible threads to
	signal.  Set a new param indicating that function has found a sigwait*
	mask.
	* cygheap.h (init_cygheap::find_tls): Reflect new parameter.
	* dcrt0.cc (parent_sigmask): New variable.
	(child_info_spawn::handle_spawn): Save parent's signal mask here.
	(dll_crt0_1): Restore parent's signal mask to tls sigmask as
	appropriate.  Call sig_dispatch_pending to flush signal queue when we
	can finally do something with signals.
	* exceptions.cc (sigpacket::process): Avoid attempting to handle
	signals if we haven't finished initializing.  Rely on the fact that